<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brainwriting</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
        <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

     <!-- IdeaVieweractivity -->
      <string name="action_edit">Edit idea</string>
    
    <!-- MainActivity -->
    <string name="tv_group_name_label">Group name</string>
    <string name="et_group_name_hint">Group name &#8230;</string>
    <string name="tv_username_label">Username</string>
    <string name="et_username_hint">Username &#8230;</string>
    <string name="b_start">Start</string>
        <string name="action_idea_viewer">Idea gallery</string>
    
    
    <!-- MainActivity -->
    <string name="action_bar_send">Send</string>

    <string name="action_bar_search">Search</string>
    <string name="action_bar_search_hint">Search text &#8230;</string>
    <string name="noUsernameError">Please enter your username</string>
    <string name="noGroupNameError">Please enter a group name</string>
    <string name="dialog_input_text_title">Enter your text</string>
    
    <!-- Layout: activity_idea_maker.xml -->
    <string name="iv_canvas_description">Canvas</string>
    <string name="iv_search_result_description">Search result</string>
    <string name="connectText">Press to connect....</string>
    <string name="groupStartedError">Group already started, please try another group name....</string>
    <string name="connectingText">Connecting, waiting for other participants....</string>
    <string name="exitBtnText">Press again to exit...</string>
    <string name="submitedError">You have already submited your ideas... Waiting for round to finish...</string>
    <string name="resultsTitle">Results available!</string>
    <string name="resultsText">You are about to see results of your brainwriting!</string>
    
    
</resources>